--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: zelim_posao
-description: A new Flutter project.
+description: Simple Flutter app that automates job searching.
 
 publish_to: 'none'
 
