--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,8 +13,8 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^0.1.3
   http: ^0.12.2
-  html: ^0.14.0+3
-  flutter_spinkit: "^4.1.2"
+  html: ^0.14.0+4
+  flutter_spinkit: ^4.1.2+1
 
 dev_dependencies:
   flutter_test:
