--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,15 +11,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^0.1.3
-  flutter_spinkit: ^4.1.2+1
-  html: ^0.14.0+4
-  http: ^0.12.2
+  cupertino_icons: ^1.0.2
+  flutter_spinkit: ^5.0.0
+  html: ^0.15.0
+  http: ^0.13.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: ^0.8.1
+  flutter_launcher_icons: ^0.9.0
 
 flutter_icons:
   android: true
